# cwe-calculator

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yml  python_test.yml
data/: normalized.csv  nvd_loaded.pickle
src/ec3/: __init__.py  calculator.py  cli.py  collector.py  cvss.py  logging.py  schemas.py  server.py  updater.py
src/ec3/server/: broker.py  cli.py  config.py  schemas.py
tests/: test_broker.py  test_calculator.py  test_cli.py  test_collector.py  test_cvss.py  test_init.py  test_server_cli.py
tests/calculator/: conftest.py  test_build_cwe_table.py  test_calculate_results.py  test_normalize_cwe.py  test_output_results.py  test_set_and_load_data.py  test_set_and_load_normalize_file.py  test_set_cvss_modifiers.py  test_support_defaults.py
tests/calculator/fixtures/: example_calculators.py  example_cve_data.py  example_results.py  setup_mock_open.py
