[tool.poetry]
name = "ec3"
version = "0.3.0"
description = "Environmental CWE CVSS Calculator (ec3)"
authors = [
    "drothenberg <drothenberg@mitre.org>",
]
packages = [
    { include = "ec3", from = "src" },
]
license = "Apache"

[tool.poetry.dependencies]
python = "^3.10"
nvdlib = "^0.7.6"

[tool.poetry.group.dev.dependencies]
bandit = "1.7.0"
black = "^22.3.0"
bumpver = "^2022.1119"
pytest = "^7.1.2"
pytest-cov = "2.11.1"
safety = "1.10.3"
isort = "^5.12.0"
mypy = "^1.2.0"
types-requests = "^2.31.0.20240125"

[tool.black]
line-length = 88
target-version = ['py310']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.bumpver]
current_version = "v1.0.0"
version_pattern = "vMAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true

[tool.bumpver.file_patterns]
# pep440_version does not have the "v" prefix
"pyproject.toml" = [
    'version = "{pep440_version}"',
]
"src/cwe_calculator/__init__.py" = [
    'version = "{pep440_version}"',
]

[tool.isort]
profile = "black"
skip_gitignore = true
